# Course_Work-4_demo

./: README.md  main.py  pyproject.toml
src/: ApiVacancies.py  hhru.py  top.py  user_interaction_func.py  work_with_file.py
