[tool.poetry]
name = "hh-ru"
version = "0.1.0"
description = ""
authors = ["Сергей Арефьев <<Simpson6515@yandex.ru>"]
readme = "README.md"
packages = [{include = "hh_ru"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
